--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,11 @@ future: true
 
 # SNS settings
 RSS: false
-weibo_username: huxpro
-zhihu_username: huxpro
-github_username: huxpro
-twitter_username: huxpro
-#facebook_username:  huxpro
+weibo_username: zui-meng-yi-jiang-hu
+zhihu_username: zui-meng-yi-jiang-hu
+github_username: zui-meng-yi-jiang-hu
+twitter_username: zui-meng-yi-jiang-hu
+#facebook_username:  zui-meng-yi-jiang-hu
 #linkedin_username:  firstname-lastname-idxxxx
 
 # Build settings
