--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: jeven Blog
-SEOTitle: 江湖有缘的博客 | Hux Blog
+SEOTitle: 江湖有缘的博客 | jeven Blog
 header-img: img/home-bg.jpg
 email: 2224126936@qq.com
 description: "这里是 @江湖有缘 的个人博客，与你一起发现更大的世界 | 做一名有梦想的IT技术人"
