--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ ga_domain: huangxuan.me
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
 sidebar-about-description: "要做一个有 梦想的IT技术人<br> React Team @ Meta"
-sidebar-avatar: https://i-blog.csdnimg.cn/direct/15be88ba87bb4b5c9d6f24fc755abdd0.jpeg#pic_center # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: https://i-blog.csdnimg.cn/direct/adb9f01088364e6d8d030382c3f45f16.png # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
 featured-tags: true # whether or not using Feature-Tags
